# insecure-app

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: autograd.yml
app/api/endpoints/: users.py
